# SessionWeave

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  sw.toml.example
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: cli.rs  config.rs  lib.rs  main.rs  ollama.rs  watcher.rs
src/db/: lancedb_store.rs  mod.rs  sqlite.rs
src/index/: extractor.rs  indexer.rs  mod.rs
src/index/parsers/: claude.rs  generic.rs  mod.rs
src/mcp/: mod.rs  server.rs
src/models/: artifact.rs  graph.rs  message.rs  mod.rs  session.rs
src/search/: mod.rs
src/utils/: mod.rs
tests/: integration.rs
tests/fixtures/: sample_claude.jsonl
