[package]
name = "sessionweave"
version = "0.1.0"
edition = "2021"
authors = ["SessionWeave Contributors"]
license = "MIT"
description = "Local, private, unified memory for all your AI coding sessions. Index, search and weave context across Claude, Cursor, Windsurf, Codex and more."
repository = "https://github.com/johanvillalba/sessionweave"
readme = "README.md"
keywords = ["ai", "coding", "memory", "cli", "local", "rag"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sw"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
colored = "2.1"
indicatif = "0.17"
termimad = "0.31"

# Async & Runtime
tokio = { version = "1.45", features = ["full", "rt-multi-thread"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Vector search (LanceDB)
lancedb = "0.18"
arrow-array = "54"
arrow-schema = "54"
futures = "0.3"

# Filesystem & Watching
walkdir = "2.5"
notify = { version = "6.1", features = ["macos_fsevent"] }

# Parsing & Utils
regex = "1.10"
sha2 = "0.10"
once_cell = "1.20"

# HTTP for Ollama
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging (light)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# MCP (Model Context Protocol) - stdio server
# Using the official approach via rmcp or direct for simplicity in v0.1
# We implement a lightweight stdio MCP handler. Full SDK optional later.
# For now we will use serde + direct jsonrpc loop.

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[features]
default = []
# Future: vector (LanceDB) and tauri dashboard will be added later

